--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^23.5.0",
-    "expo": "~54.0.25",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-notifications": "^0.32.14",
-    "expo-status-bar": "~3.0.8",
+    "@react-native-firebase/app": "^20.5.0",
+    "expo": "~52.0.0",
+    "expo-linear-gradient": "~14.0.0",
+    "expo-notifications": "~0.29.8",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^12.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-web": "^0.21.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-web": "~0.19.13"
   },
   "private": true
 }
